tests/extensions/structs/semanticErr/badConstructor3.wacc
# Line UndefinedIdentifierError
begin
    struct sa is
        int s
        int b
    end
    sa s = sa
end